src/objects/Windent_Calendar__c.object
<CustomObject>
    <description>A table to hold the Windent Calendar data that is pulled in for the lab management system</description>
    <fields>
        <fullName>Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appt_Type_Code__c</fullName>
        <description>This will be swapped out with a lookup reference later. I&apos;m just putting this here now for testing purposes</description>
        <label>Appt Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apt_Date__c</fullName>
        <label>Apt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CalendarStatus__c</fullName>
        <label>CalendarStatus</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChairId__c</fullName>
        <label>ChairId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicID__c</fullName>
        <description>The ID for the clinic this apt is from....good chance I&apos;ll replace this with a lookup relationship to a lab further down the road.</description>
        <label>ClinicID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientId__c</fullName>
        <description>Patient is is the clinicid + &apos;_&apos; + patientnum</description>
        <label>PatientId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <description>Might want to break this out in to a separate table further down the road.</description>
        <label>Patient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeFrom__c</fullName>
        <label>TimeFrom</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTo__c</fullName>
        <label>TimeTo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Windent Calendar</label>
    <nameField>
        <label>Windent Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windent Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>